--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@ if (window.netlifyIdentity) {
 
 
 
-
+<script>
    // Mobile Menü öffnen/schließen
 const toggle = document.getElementById('menuToggle');
 const mobileMenu = document.getElementById('mobileMenu');
