--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
   <!-- Menü in der Mitte -->
   <ul id="menu" class="hidden md:flex text-xl gap-6 font-medium mx-auto items-center">
     <!-- Darkmode Button links neben Home -->
-
+ <li>
+      <button id="darkToggle"
+        class="px-3 py-1 rounded-lg bg-gray-200 dark:bg-gray-700 dark:text-white hover:bg-gray-300 dark:hover:bg-gray-600 transition">
+        🌙
+      </button>
+    </li>
   
 
     <li><a href="index.html" class="hover:text-purple-500 transition">Home</a></li>
