--- a/index.html
+++ b/index.html
@@ -74,15 +74,58 @@
     </li>
   </ul>
 
-  <div class="hidden md:flex items-center gap-3">
-  <button id="netlify-login-desktop" class="bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-500 transition">
-    Login
-  </button>
-  <button id="netlify-logout-desktop" class="bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-500 transition hidden">
-    Logout
-  </button>
-  <p id="status-desktop" class="text-sm text-gray-600 dark:text-gray-300">Nicht eingeloggt</p>
-</div>
+
+
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="flex justify-between h-16">
+
+      <!-- Links -->
+      <div class="flex">
+        <!-- Logo oder Name -->
+        <div class="flex-shrink-0 flex items-center">
+          <a href="/" class="text-xl font-bold dark:text-white">MeineSeite</a>
+        </div>
+
+        <!-- Nav Icons -->
+        <div class="hidden md:flex md:space-x-4 md:ml-6 items-center">
+          <!-- Home -->
+          <a href="/" class="p-2 hover:bg-blue-300 rounded">
+            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="currentColor" viewBox="0 0 1024 1024">
+              <path d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 0 0-44.4 0L77.5 505a63.9 63.9 0 0 0-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0 0 18.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204zm217.9-325.7V868H632V640c0-22.1-17.9-40-40-40H432c-22.1 0-40 17.9-40 40v228H238.1V542.3h-96l370-369.7 23.1 23.1L882 542.3h-96.1z"/>
+            </svg>
+          </a>
+
+          <!-- Suche -->
+          <button class="p-2 hover:bg-blue-300 rounded">
+            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+              <path d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </button>
+
+          <!-- Warenkorb -->
+          <a href="/warenkorb" class="p-2 hover:bg-blue-300 rounded">
+            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+              <circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/>
+              <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/>
+            </svg>
+          </a>
+        </div>
+      </div>
+
+      <!-- Rechts: Login -->
+      <div class="flex items-center">
+        <button id="netlify-login-desktop" class="flex items-center p-2 hover:bg-blue-300 rounded">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M12 2.5a5.5 5.5 0 0 1 3.1 10A9 9 0 0 1 21 20.7a.75.75 0 1 1-1.5.05 7.5 7.5 0 0 0-15 0 .75.75 0 0 1-1.5-.05 9 9 0 0 1 5.9-8.2A5.5 5.5 0 1 1 12 2.5z"/>
+          </svg>
+        </button>
+        <button id="netlify-logout-desktop" class="hidden p-2 bg-red-500 text-white rounded">Logout</button>
+        <span id="status-desktop" class="ml-2 text-sm dark:text-white"></span>
+      </div>
+    </div>
+  </div>
+
+
 
   <div class="flex items-center gap-3 md:hidden">
     <!-- Dark Mode Button (mobil) -->
