--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="flex">
         <!-- Logo oder Name -->
         <div class="flex-shrink-0 flex items-center">
-          <a href="/" class="text-xl font-bold dark:text-white">MeineSeite</a>
+          <a href="/" class="text-xl font-bold dark:text-white"></a>
         </div>
 
         <!-- Nav Icons -->
