--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </div>
 
       <!-- Rechts: Login -->
-      <div class="flex items-center">
+      <div class="flex items-center ml-auto">
         <button id="netlify-login-desktop" class="flex items-center p-2 hover:bg-blue-300 rounded">
           <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
             <path d="M12 2.5a5.5 5.5 0 0 1 3.1 10A9 9 0 0 1 21 20.7a.75.75 0 1 1-1.5.05 7.5 7.5 0 0 0-15 0 .75.75 0 0 1-1.5-.05 9 9 0 0 1 5.9-8.2A5.5 5.5 0 1 1 12 2.5z"/>
