--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <!-- Login / Logout -->
   <button id="netlify-login-desktop" class="flex items-center p-2 hover:bg-blue-300 rounded">
     <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-      <path d="M12 2.5a5.5 5.5 0 0 1 3.1 10A9 9 0 0 1 21 20.7a.75.75 0 1 1-1.5.05 7.5 7.5 0 0 0-15 0 .75.75 0 0 1-1.5-.05 9 9 0 0 1 5.9-8.2A5.5 5.5 0 1 1 12 2.5z"/>
+      <path d="M12 12c2.7 0 4.8-2.1 4.8-4.8S14.7 2.4 12 2.4 7.2 4.5 7.2 7.2 9.3 12 12 12zm0 2.4c-3.2 0-9.6 1.6-9.6 4.8v2.4h19.2v-2.4c0-3.2-6.4-4.8-9.6-4.8z"/>
     </svg>
   </button>
   <button id="netlify-logout-desktop" class="hidden p-2 bg-red-500 text-white rounded">Logout</button>
