--- a/index.html
+++ b/index.html
@@ -30,7 +30,45 @@
 
     <!-- Menü -->
     <ul id="menu" class="hidden md:flex text-xl gap-6 font-medium mx-auto items-center">
-      
+      <!-- Rechts: Icons + Login -->
+<div class="flex items-center space-x-4">
+  <!-- Home -->
+  <a href="index.html" class="flex p-2 hover:bg-blue-300 rounded">
+    <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em"
+      viewBox="0 0 1024 1024" fill="currentColor">
+      <path d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 0 0-44.4 0L77.5 505a63.9 63.9 0 0 0-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0 0 18.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204z"/>
+    </svg>
+  </a>
+
+  <!-- Suche -->
+  <button class="flex p-2 hover:bg-blue-300 rounded">
+    <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em"
+      viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor">
+      <path d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+        stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+  </button>
+
+  <!-- Warenkorb -->
+  <button class="flex p-2 hover:bg-blue-300 rounded">
+    <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em"
+      viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor">
+      <circle cx="9" cy="21" r="1"/>
+      <circle cx="20" cy="21" r="1"/>
+      <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/>
+    </svg>
+  </button>
+
+  <!-- Login / Logout -->
+  <button id="netlify-login-desktop" class="flex items-center p-2 hover:bg-blue-300 rounded">
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+      <path d="M12 12c2.7 0 4.8-2.1 4.8-4.8S14.7 2.4 12 2.4 7.2 4.5 7.2 7.2 9.3 12 12 12zm0 2.4c-3.2 0-9.6 1.6-9.6 4.8v2.4h19.2v-2.4c0-3.2-6.4-4.8-9.6-4.8z"/>
+    </svg>
+  </button>
+  <button id="netlify-logout-desktop"
+    class="hidden p-2 bg-red-500 text-white rounded">Logout</button>
+</div>
+
       <!-- Darkmode Switch -->
       <label class="inline-flex items-center relative">
         <input class="peer hidden" id="darkmode-toggle" type="checkbox" />
