--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </a>
 
     <!-- Menü -->
-    <ul id="menu" class="hidden md:flex text-xl gap-6 font-medium mx-auto items-center">
+    <ul id="menu" class="hidden md:flex text-xl gap-6 font-medium mx-auto items-center ml-auto">
       <!-- Rechts: Icons + Login -->
 <div class="flex items-center space-x-4">
   <!-- Home -->
