--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </a>
 
     <!-- Menü -->
-    <ul id="menu" class="hidden md:flex text-xl gap-6 font-medium mx-auto items-center ml-auto">
+    <ul id="menu" class="hidden md:flex text-xl gap-6 font-medium mx-auto items-center ">
       <!-- Rechts: Icons + Login -->
-<div class="flex items-center space-x-4">
+<div class="flex items-center space-x-4 ml-auto">
   <!-- Home -->
   <a href="index.html" class="flex p-2 hover:bg-blue-300 rounded">
     <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em"
