--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
   <!-- Navbar -->
-  <nav class="flex items-center justify-between p-6 bg-white dark:bg-gray-800 shadow-lg sticky top-0 z-50">
+  <nav class="flex items-center justify-between px-4 py-2 bg-white shadow dark:bg-gray-800 shadow-lg sticky top-0 z-50">
     <!-- Logo -->
     <a href="index.html" class="flex items-center gap-2">
       <img src="Bilder/WhatsApp Bild 2025-08-19 um 11.43.56_d590e906.jpg" alt="A&T Tech Logo" class="h-10">
