--- a/index.html
+++ b/index.html
@@ -22,97 +22,101 @@
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
   <!-- Navbar -->
-  <nav class="flex items-center justify-between px-4 py-2 bg-white shadow dark:bg-gray-800 shadow-lg sticky top-0 z-50">
-    <!-- Logo -->
-    <a href="index.html" class="flex items-center gap-2">
-      <img src="Bilder/WhatsApp Bild 2025-08-19 um 11.43.56_d590e906.jpg" alt="A&T Tech Logo" class="h-10">
-    </a>
-
-    <!-- Menü -->
-    <ul id="menu" class="hidden md:flex text-xl gap-6 font-medium mx-auto items-center ">
-      <!-- Darkmode Switch -->
-      <label class="inline-flex items-center relative">
-        <input class="peer hidden" id="darkmode-toggle" type="checkbox" />
-        <div
-          class="relative w-[70px] h-[30px] bg-white peer-checked:bg-zinc-500 rounded-full 
-          after:absolute after:content-[''] after:w-[24px] after:h-[24px] 
-          after:bg-gradient-to-r from-orange-500 to-yellow-400 
-          peer-checked:after:from-zinc-900 peer-checked:after:to-zinc-900 
-          after:rounded-full after:top-[3px] after:left-[3px] 
-          active:after:w-[30px] peer-checked:after:left-[67px] 
-          peer-checked:after:translate-x-[-100%] shadow-sm duration-300 
-          after:duration-300 after:shadow-md"
-        ></div>
-
-        <!-- Sonne -->
-        <svg viewBox="0 0 24 24"
-          class="fill-white peer-checked:opacity-60 absolute w-4 h-4 left-[8px]">
-          <path d="M12,17c-2.76,0-5-2.24-5-5s2.24-5,5-5,5,2.24,5,5-2.24,5-5,5ZM13,0h-2V5h2V0Zm0,19h-2v5h2v-5ZM5,11H0v2H5v-2Zm19,0h-5v2h5v-2Zm-2.81-6.78l-1.41-1.41-3.54,3.54,1.41,1.41,3.54-3.54ZM7.76,17.66l-1.41-1.41-3.54,3.54,1.41,1.41,3.54-3.54Zm0-11.31l-3.54-3.54-1.41,1.41,3.54,3.54,1.41-1.41Zm13.44,13.44l-3.54-3.54-1.41,1.41,3.54,3.54,1.41-1.41Z"></path>
-        </svg>
-
-        <!-- Mond -->
-        <svg viewBox="0 0 24 24"
-          class="fill-black opacity-60 peer-checked:opacity-70 peer-checked:fill-white absolute w-4 h-4 right-[8px]">
-          <path d="M12.009,24A12.067,12.067,0,0,1,.075,10.725,12.121,12.121,0,0,1,10.1.152a13,13,0,0,1,5.03.206,2.5,2.5,0,0,1,1.8,1.8,2.47,2.47,0,0,1-.7,2.425c-4.559,4.168-4.165,10.645.807,14.412h0a2.5,2.5,0,0,1-.7,4.319A13.875,13.875,0,0,1,12.009,24Zm.074-22a10.776,10.776,0,0,0-1.675.127,10.1,10.1,0,0,0-8.344,8.8A9.928,9.928,0,0,0,4.581,18.7a10.473,10.473,0,0,0,11.093,2.734.5.5,0,0,0,.138-.856h0C9.883,16.1,9.417,8.087,14.865,3.124a.459.459,0,0,0,.127-.465.491.491,0,0,0-.356-.362A10.68,10.68,0,0,0,12.083,2ZM20.5,12a1,1,0,0,1-.97-.757l-.358-1.43L17.74,9.428a1,1,0,0,1,.035-1.94l1.4-.325.351-1.406a1,1,0,0,1,1.94,0l.355,1.418,1.418.355a1,1,0,0,1,0,1.94l-1.418.355-.355,1.418A1,1,0,0,1,20.5,12ZM16,14a1,1,0,0,0,2,0A1,1,0,0,0,16,14Zm6,4a1,1,0,0,0,2,0A1,1,0,0,0,22,18Z"></path>
-        </svg>
-      </label>
-
-      <!-- Menü-Links -->
-      <li><a href="index.html">Home</a></li>
-      <li><a href="reparaturen.html">Reparaturen</a></li>
-      <li><a href="builds.html">PC-Builds</a></li>
-      <li><a href="about.html">Über uns</a></li>
-      <li><a href="contact.html">Kontakt</a></li>
-
-      <!-- Discord -->
-      <li>
-        <a href="https://discord.gg/eyevVpHH5V" target="_blank" class="discord-btn">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" class="w-6 h-6 fill-current text-indigo-400">
-            <path d="M524.531 69.836a1.5 1.5 0 0 0-.764-.7A485.065 485.065 0 0 0 404.081 32.03a1.816 1.816 0 0 0-1.923.91 337.461 337.461 0 0 0-14.9 30.6 447.848 447.848 0 0 0-134.426 0 309.541 309.541 0 0 0-15.135-30.6 1.89 1.89 0 0 0-1.924-.91 483.689 483.689 0 0 0-119.688 37.107 1.712 1.712 0 0 0-.788.676C39.068 183.651 18.186 294.69 28.43 404.354a2.016 2.016 0 0 0 .765 1.375 487.666 487.666 0 0 0 146.825 74.189 1.9 1.9 0 0 0 2.063-.676A348.2 348.2 0 0 0 208.12 430.4a1.86 1.86 0 0 0-1.019-2.588 321.173 321.173 0 0 1-45.868-21.853 1.885 1.885 0 0 1-.185-3.126 251.047 251.047 0 0 0 9.109-7.137 1.819 1.819 0 0 1 1.9-.256c96.229 43.917 200.41 43.917 295.5 0a1.812 1.812 0 0 1 1.924.233 234.533 234.533 0 0 0 9.132 7.16 1.884 1.884 0 0 1-.162 3.126 301.407 301.407 0 0 1-45.89 21.83 1.875 1.875 0 0 0-1 2.611 391.055 391.055 0 0 0 30.014 48.815 1.864 1.864 0 0 0 2.063.7A486.048 486.048 0 0 0 610.7 405.729a1.882 1.882 0 0 0 .765-1.352c12.264-126.783-20.532-236.912-86.934-334.541zM222.491 337.58c-28.972 0-52.844-26.587-52.844-59.239s23.409-59.241 52.844-59.241c29.665 0 53.306 26.82 52.843 59.239 0 32.654-23.41 59.241-52.843 59.241zm195.38 0c-28.971 0-52.843-26.587-52.843-59.239s23.409-59.241 52.843-59.241c29.667 0 53.307 26.820 52.844 59.239 0 32.654-23.177 59.241-52.844 59.241z"/>
-          </svg>
-          <span class="ml-2">Discord</span>
-        </a>
-      </li>
-  </ul>
-  <div class="flex items-center space-x-4 ml-auto">
-  <!-- Home -->
-  <a href="index.html" class="flex p-2 hover:bg-blue-300 rounded">
-    <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em"
-      viewBox="0 0 1024 1024" fill="currentColor">
-      <path d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 0 0-44.4 0L77.5 505a63.9 63.9 0 0 0-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0 0 18.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204z"/>
-    </svg>
+  <!-- Navbar -->
+<nav class="flex items-center justify-between px-4 py-2 bg-white dark:bg-gray-800 shadow-lg sticky top-0 z-50">
+  <!-- Logo -->
+  <a href="index.html" class="flex items-center gap-2">
+    <img src="Bilder/WhatsApp Bild 2025-08-19 um 11.43.56_d590e906.jpg" alt="A&T Tech Logo" class="h-10">
   </a>
 
-  <!-- Suche -->
-  <button class="flex p-2 hover:bg-blue-300 rounded">
-    <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em"
-      viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor">
-      <path d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
-        stroke-linecap="round" stroke-linejoin="round"/>
-    </svg>
-  </button>
+  <!-- Menü + Darkmode Switch (zentriert) -->
+  <ul id="menu" class="hidden md:flex text-xl gap-6 font-medium items-center mx-auto">
+    <!-- Darkmode Switch -->
+    <label class="inline-flex items-center relative">
+      <input class="peer hidden" id="darkmode-toggle" type="checkbox" />
+      <div
+        class="relative w-[70px] h-[30px] bg-white peer-checked:bg-zinc-500 rounded-full 
+        after:absolute after:content-[''] after:w-[24px] after:h-[24px] 
+        after:bg-gradient-to-r from-orange-500 to-yellow-400 
+        peer-checked:after:from-zinc-900 peer-checked:after:to-zinc-900 
+        after:rounded-full after:top-[3px] after:left-[3px] 
+        active:after:w-[30px] peer-checked:after:left-[67px] 
+        peer-checked:after:translate-x-[-100%] shadow-sm duration-300 
+        after:duration-300 after:shadow-md"
+      ></div>
 
-  <!-- Warenkorb -->
-  <button class="flex p-2 hover:bg-blue-300 rounded">
-    <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em"
-      viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor">
-      <circle cx="9" cy="21" r="1"/>
-      <circle cx="20" cy="21" r="1"/>
-      <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/>
-    </svg>
-  </button>
+      <!-- Sonne -->
+      <svg viewBox="0 0 24 24"
+        class="fill-white peer-checked:opacity-60 absolute w-4 h-4 left-[8px]">
+        <path d="M12,17c-2.76,0-5-2.24-5-5s2.24-5,5-5,5,2.24,5,5-2.24,5-5,5ZM13,0h-2V5h2V0Zm0,19h-2v5h2v-5ZM5,11H0v2H5v-2Zm19,0h-5v2h5v-2Zm-2.81-6.78l-1.41-1.41-3.54,3.54,1.41,1.41,3.54-3.54ZM7.76,17.66l-1.41-1.41-3.54,3.54,1.41,1.41,3.54-3.54Zm0-11.31l-3.54-3.54-1.41,1.41,3.54,3.54,1.41-1.41Zm13.44,13.44l-3.54-3.54-1.41,1.41,3.54,3.54,1.41-1.41Z"></path>
+      </svg>
 
-  <!-- Login / Logout -->
-  <button id="netlify-login-desktop" class="flex items-center p-2 hover:bg-blue-300 rounded">
-    <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-      <path d="M12 12c2.7 0 4.8-2.1 4.8-4.8S14.7 2.4 12 2.4 7.2 4.5 7.2 7.2 9.3 12 12 12zm0 2.4c-3.2 0-9.6 1.6-9.6 4.8v2.4h19.2v-2.4c0-3.2-6.4-4.8-9.6-4.8z"/>
-    </svg>
-  </button>
-  <button id="netlify-logout-desktop"
-    class="hidden p-2 bg-red-500 text-white rounded">Logout</button>
-</div>
+      <!-- Mond -->
+      <svg viewBox="0 0 24 24"
+        class="fill-black opacity-60 peer-checked:opacity-70 peer-checked:fill-white absolute w-4 h-4 right-[8px]">
+        <path d="M12.009,24A12.067,12.067,0,0,1,.075,10.725,12.121,12.121,0,0,1,10.1.152a13,13,0,0,1,5.03.206,2.5,2.5,0,0,1,1.8,1.8,2.47,2.47,0,0,1-.7,2.425c-4.559,4.168-4.165,10.645.807,14.412h0a2.5,2.5,0,0,1-.7,4.319A13.875,13.875,0,0,1,12.009,24Zm.074-22a10.776,10.776,0,0,0-1.675.127,10.1,10.1,0,0,0-8.344,8.8A9.928,9.928,0,0,0,4.581,18.7a10.473,10.473,0,0,0,11.093,2.734.5.5,0,0,0,.138-.856h0C9.883,16.1,9.417,8.087,14.865,3.124a.459.459,0,0,0,.127-.465.491.491,0,0,0-.356-.362A10.68,10.68,0,0,0,12.083,2Z"></path>
+      </svg>
+    </label>
 
-  </nav>
+    <!-- Menü-Links -->
+    <li><a href="index.html">Home</a></li>
+    <li><a href="reparaturen.html">Reparaturen</a></li>
+    <li><a href="builds.html">PC-Builds</a></li>
+    <li><a href="about.html">Über uns</a></li>
+    <li><a href="contact.html">Kontakt</a></li>
+
+    <!-- Discord -->
+    <li>
+      <a href="https://discord.gg/eyevVpHH5V" target="_blank" class="discord-btn flex items-center">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" class="w-6 h-6 fill-current text-indigo-400">
+          <path d="M524.531 69.836a1.5 1.5 0 0 0-.764-.7A485.065 485.065 0 0 0 404.081 32.03a1.816 1.816 0 0 0-1.923.91 337.461 337.461 0 0 0-14.9 30.6 447.848 447.848 0 0 0-134.426 0 309.541 309.541 0 0 0-15.135-30.6 1.89 1.89 0 0 0-1.924-.91A483.689 483.689 0 0 0 116.24 69.137a1.712 1.712 0 0 0-.787.676C39.066 183.651 18.186 294.69 28.43 404.354a2.016 2.016 0 0 0 .765 1.375A487.666 487.666 0 0 0 176.02 479.918a1.9 1.9 0 0 0 2.063-.676A348.2 348.2 0 0 0 208.12 430.4a1.86 1.86 0 0 0-1.019-2.588 321.173 321.173 0 0 1-45.868-21.853 1.885 1.885 0 0 1-.185-3.126c3.082-2.309 6.166-4.711 9.109-7.137a1.819 1.819 0 0 1 1.9-.26c96.23 43.917 200.41 43.917 295.5 0a1.816 1.816 0 0 1 1.924.233c2.943 2.426 6.027 4.854 9.132 7.163a1.884 1.884 0 0 1-.162 3.126 301.407 301.407 0 0 1-45.89 21.83 1.875 1.875 0 0 0-1 2.611 391.055 391.055 0 0 0 29.014 48.815 1.864 1.864 0 0 0 2.063.7A486.048 486.048 0 0 0 610.7 405.729a1.882 1.882 0 0 0 .765-1.352C623.729 277.594 590.933 167.465 524.531 69.836ZM222.491 337.58c-28.972 0-52.844-26.587-52.844-59.239s23.452-59.239 52.844-59.239c29.61 0 53.257 26.82 52.844 59.239C275.335 311 251.923 337.58 222.491 337.58Zm195.018 0c-28.971 0-52.844-26.587-52.844-59.239s23.452-59.239 52.844-59.239c29.609 0 53.257 26.82 52.844 59.239C470.335 311 447.155 337.58 417.509 337.58Z"/>
+        </svg>
+        <span class="ml-2">Discord</span>
+      </a>
+    </li>
+  </ul>
+
+  <!-- Rechte Icons -->
+  <div class="flex items-center space-x-4 ml-auto">
+    <!-- Home -->
+    <a href="index.html" class="flex p-2 hover:bg-blue-300 rounded">
+      <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em"
+        viewBox="0 0 1024 1024" fill="currentColor">
+        <path d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 0 0-44.4 0L77.5 505a63.9 63.9 0 0 0-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0 0 18.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204z"/>
+      </svg>
+    </a>
+
+    <!-- Suche -->
+    <button class="flex p-2 hover:bg-blue-300 rounded">
+      <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em"
+        viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor">
+        <path d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+          stroke-linecap="round" stroke-linejoin="round"/>
+      </svg>
+    </button>
+
+    <!-- Warenkorb -->
+    <button class="flex p-2 hover:bg-blue-300 rounded">
+      <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em"
+        viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor">
+        <circle cx="9" cy="21" r="1"/>
+        <circle cx="20" cy="21" r="1"/>
+        <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/>
+      </svg>
+    </button>
+
+    <!-- Login / Logout -->
+    <button id="netlify-login-desktop" class="flex items-center p-2 hover:bg-blue-300 rounded">
+      <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6"
+        fill="currentColor" viewBox="0 0 24 24">
+        <path d="M12 12c2.7 0 4.8-2.1 4.8-4.8S14.7 2.4 12 2.4 7.2 4.5 7.2 7.2 9.3 12 12 12zm0 2.4c-3.2 0-9.6 1.6-9.6 4.8v2.4h19.2v-2.4c0-3.2-6.4-4.8-9.6-4.8z"/>
+      </svg>
+    </button>
+    <button id="netlify-logout-desktop"
+      class="hidden p-2 bg-red-500 text-white rounded">Logout</button>
+  </div>
+</nav>
+
 
   <!-- Hero -->
   <section id="home" class="flex flex-col items-center justify-center text-center py-24 bg-gradient-to-r from-purple-600 to-indigo-600 text-white relative overflow-hidden">
