--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
 <label class="inline-flex items-center relative">
   <input class="peer hidden" id="darkmode-toggle" type="checkbox" />
   <div
-    class="relative w-[110px] h-[50px] bg-white peer-checked:bg-zinc-500 rounded-full after:absolute after:content-[''] after:w-[40px] after:h-[40px] after:bg-gradient-to-r from-orange-500 to-yellow-400 peer-checked:after:from-zinc-900 peer-checked:after:to-zinc-900 after:rounded-full after:top-[5px] after:left-[5px] active:after:w-[50px] peer-checked:after:left-[105px] peer-checked:after:translate-x-[-100%] shadow-sm duration-300 after:duration-300 after:shadow-md"
+    class="relative w-[80px] h-[36px] bg-white peer-checked:bg-zinc-500 rounded-full 
+after:absolute after:content-[''] after:w-[28px] after:h-[28px] 
+after:bg-gradient-to-r from-orange-500 to-yellow-400 
+peer-checked:after:from-zinc-900 peer-checked:after:to-zinc-900 
+after:rounded-full after:top-[4px] after:left-[4px] 
+active:after:w-[34px] peer-checked:after:left-[78px] 
+peer-checked:after:translate-x-[-100%] shadow-sm duration-300 
+after:duration-300 after:shadow-md
+"
   ></div>
   <svg
     height="0"
