--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     after:bg-gradient-to-r from-orange-500 to-yellow-400 
     peer-checked:after:from-zinc-900 peer-checked:after:to-zinc-900 
     after:rounded-full after:top-[4px] after:left-[4px] 
-    active:after:w-[34px] peer-checked:after:left-[76px] 
-    peer-checked:after:translate-x-[-100%] shadow-sm duration-300 
+    active:after:w-[34px] peer-checked:after:left-[48px] 
+    peer-checked:after:translate-x-0 shadow-sm duration-300 
     after:duration-300 after:shadow-md"
   ></div>
 
@@ -66,6 +66,7 @@
     ></path>
   </svg>
 </label>
+
 
 
 
