--- a/index.html
+++ b/index.html
@@ -131,12 +131,15 @@
 
 
   <!-- Hero -->
-  <section id="home" class="flex flex-col items-center justify-center text-center py-24 bg-gradient-to-r from-purple-600 to-indigo-600 text-white relative overflow-hidden">
-    <h2 data-aos="fade-up" class="text-5xl font-extrabold mb-4 drop-shadow-lg">Willkommen bei A&T Tech</h2>
-    <p data-aos="fade-up" data-aos-delay="200" class="max-w-2xl text-lg mb-6 opacity-90">
-      Dein Partner für PC-Reparaturen, Custom-Builds und professionelle IT-Dienstleistungen.
-    </p>
-  </section>
+<section id="home" class="flex flex-col items-center justify-center text-center min-h-screen py-24 bg-gradient-to-r from-purple-600 to-indigo-600 text-white relative overflow-hidden">
+  <h2 data-aos="fade-up" class="text-5xl font-extrabold mb-4 drop-shadow-lg">
+    Willkommen bei A&T Tech
+  </h2>
+  <p data-aos="fade-up" data-aos-delay="200" class="max-w-2xl text-lg mb-6 opacity-90">
+    Dein Partner für PC-Reparaturen, Custom-Builds und professionelle IT-Dienstleistungen.
+  </p>
+</section>
+
 
   <!-- Features -->
   <section class="grid grid-cols-1 md:grid-cols-2 gap-6 p-8 w-full">
