--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@
 
 
   <!-- Hero -->
-<section id="home" class="flex flex-col items-center justify-center text-center min-h-screen pt-32 bg-gradient-to-r from-purple-600 to-indigo-600 text-white relative overflow-hidden">
+<section id="home" 
+  class="flex flex-col items-center justify-center text-center min-h-[50vh] pt-16 
+         bg-gradient-to-r from-purple-600 to-indigo-600 text-white relative overflow-hidden">
   <h2 class="text-5xl font-extrabold mb-4 drop-shadow-lg">
     Willkommen bei A&T Tech
   </h2>
@@ -139,6 +141,7 @@
     Dein Partner für PC-Reparaturen, Custom-Builds und professionelle IT-Dienstleistungen.
   </p>
 </section>
+
 
 
   <!-- Features -->
