--- a/gaming-pcs.html
+++ b/gaming-pcs.html
@@ -152,149 +152,7 @@
   </li>
 </ul>
 
-<script>
-if (window.netlifyIdentity) {
-  document.addEventListener("DOMContentLoaded", () => {
-    netlifyIdentity.init();
 
-    const btnLoginDesktop = document.getElementById("netlify-login-desktop");
-    const btnLogoutDesktop = document.getElementById("netlify-logout-desktop");
-    const statusDesktop = document.getElementById("status-desktop");
-
-    const btnLoginMobile = document.getElementById("netlify-login-mobile");
-    const btnLogoutMobile = document.getElementById("netlify-logout-mobile");
-    const statusMobile = document.getElementById("status-mobile");
-
-    const mobileMenu = document.getElementById("mobileMenu");
-
-    function updateUI(user) {
-      const loggedIn = !!user;
-
-      // Desktop
-      if (btnLoginDesktop) btnLoginDesktop.classList.toggle("hidden", loggedIn);
-      if (btnLogoutDesktop) btnLogoutDesktop.classList.toggle("hidden", !loggedIn);
-      if (statusDesktop) statusDesktop.textContent = loggedIn
-        ? "Hallo " + (user.user_metadata?.full_name || user.email)
-        : "Nicht eingeloggt";
-
-      // Mobile
-      if (btnLoginMobile) btnLoginMobile.classList.toggle("hidden", loggedIn);
-      if (btnLogoutMobile) btnLogoutMobile.classList.toggle("hidden", !loggedIn);
-      if (statusMobile) statusMobile.textContent = loggedIn
-        ? "Hallo " + (user.user_metadata?.full_name || user.email)
-        : "Nicht eingeloggt";
-    }
-
-    // Init mit aktuellem User
-    netlifyIdentity.on("init", user => updateUI(user));
-
-    // Login
-    netlifyIdentity.on("login", user => {
-      updateUI(user);
-      netlifyIdentity.close();
-      if (mobileMenu) mobileMenu.classList.add("hidden"); // Menü schließen
-    });
-
-    // Logout
-    netlifyIdentity.on("logout", () => updateUI(null));
-
-    // Buttons
-    if (btnLoginDesktop) btnLoginDesktop.addEventListener("click", () => netlifyIdentity.open("login"));
-    if (btnLogoutDesktop) btnLogoutDesktop.addEventListener("click", () => netlifyIdentity.logout());
-
-    if (btnLoginMobile) btnLoginMobile.addEventListener("click", () => netlifyIdentity.open("login"));
-    if (btnLogoutMobile) btnLogoutMobile.addEventListener("click", () => netlifyIdentity.logout());
-
-    // Prüfen ob schon eingeloggt
-    updateUI(netlifyIdentity.currentUser());
-  });
-}
-</script>
-
-
-  
-  <script type="module">
-  // Firebase SDKs importieren
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-  import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } 
-    from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-
-  // Dein Firebase Config (aus Console kopieren!)
-  const firebaseConfig = {
-    apiKey: "DEIN_API_KEY",
-    authDomain: "DEIN_PROJEKT.firebaseapp.com",
-    projectId: "DEIN_PROJEKT_ID",
-    storageBucket: "DEIN_PROJEKT.appspot.com",
-    messagingSenderId: "DEIN_ID",
-    appId: "DEINE_APP_ID"
-  };
-
-  // Initialisieren
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
-  const provider = new GoogleAuthProvider();
-
-  // Login mit Google
-  document.getElementById("google-login").addEventListener("click", async () => {
-    try {
-      const result = await signInWithPopup(auth, provider);
-      console.log("Eingeloggt:", result.user);
-    } catch (error) {
-      console.error(error);
-    }
-  });
-
-  // Logout
-  document.getElementById("logout").addEventListener("click", async () => {
-    await signOut(auth);
-    console.log("Abgemeldet");
-  });
-
-  // Beobachten ob jemand eingeloggt ist
-  onAuthStateChanged(auth, user => {
-    if (user) {
-      document.getElementById("status").textContent = "Hallo " + user.displayName;
-    } else {
-      document.getElementById("status").textContent = "Nicht eingeloggt";
-    }
-  });
-
-  
- 
-
-  // Aktive Seite markieren
-  (function () {
-    function normalizePath(input) {
-      try {
-        const url = new URL(input, window.location.href);
-        let path = url.pathname;
-        if (path.endsWith("/")) path += "index.html";
-        const file = path.split("/").pop();
-        return file || "index.html";
-      } catch (e) {
-        let s = (input || "").split("#")[0].split("?")[0];
-        if (s.endsWith("/")) s += "index.html";
-        return s.split("/").pop() || "index.html";
-      }
-    }
-
-    const current = normalizePath(window.location.href);
-
-    document.querySelectorAll("nav a[href]").forEach(a => {
-      const target = normalizePath(a.getAttribute("href"));
-      if (target === current) {
-        a.classList.add("text-purple-500", "font-bold");
-        a.setAttribute("aria-current", "page");
-      } else {
-        a.classList.remove("text-purple-500", "font-bold");
-        a.removeAttribute("aria-current");
-      }
-    });
-  })();
-
-  </script>
-
-  
 <!-- Hero -->
 <section class="text-center py-20 bg-gradient-to-r from-purple-600 to-indigo-600 text-white">
   <h1 class="text-4xl font-extrabold mb-4">Gaming PCs</h1>
@@ -448,60 +306,8 @@ if (window.netlifyIdentity) {
   © 2025 A&T Tech – Alle Rechte vorbehalten.
 </footer>
 
-<script>
-    // AOS Init
-    AOS.init({ duration: 1000, once: true });
+<script src="/js/main.js"></script>
 
-
-  document.addEventListener("DOMContentLoaded", () => {
-    // Beide Buttons holen (Desktop & Mobile)
-    const btns = [
-      document.getElementById("darkToggle"),
-      document.getElementById("darkToggleMobile")
-    ];
-
-    // Funktion Icon setzen
-    function updateIcons() {
-      btns.forEach(btn => {
-        if (btn) {
-          btn.textContent = document.documentElement.classList.contains("dark")
-            ? "☀️"
-            : "🌙";
-        }
-      });
-    }
-
-    // Prüfen ob Darkmode gespeichert ist
-    if (localStorage.getItem("theme") === "dark") {
-      document.documentElement.classList.add("dark");
-    }
-
-    // Icons beim Laden updaten
-    updateIcons();
-
-    // Click-Event für beide Buttons
-    btns.forEach(btn => {
-      if (!btn) return;
-      btn.addEventListener("click", () => {
-        document.documentElement.classList.toggle("dark");
-        localStorage.setItem(
-          "theme",
-          document.documentElement.classList.contains("dark") ? "dark" : "light"
-        );
-        updateIcons();
-      });
-    });
-  });
-
-
-
-   // Mobile Menü öffnen/schließen
-const toggle = document.getElementById('menuToggle');
-const mobileMenu = document.getElementById('mobileMenu');
-
-toggle.addEventListener('click', () => {
-  mobileMenu.classList.toggle('hidden');
-});
   
 </script>
 </body>
