--- a/gaming-pcs.html
+++ b/gaming-pcs.html
@@ -305,6 +305,13 @@
 <footer class="text-center p-6 bg-gray-200 dark:bg-gray-700">
   © 2025 A&T Tech – Alle Rechte vorbehalten.
 </footer>
+   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      once: true,
+      duration: 800
+    });
+  </script>
 
 <script src="/js/main.js"></script>
 
