--- a/gaming-pcs.html
+++ b/gaming-pcs.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>A&T Tech – reperatur</title>
+  <title>A&T Tech – Gaming Pc</title>
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
