--- a/gaming-pcs.html
+++ b/gaming-pcs.html
@@ -66,10 +66,6 @@
   </svg>
 </label>
 
-
-
-
-
     <!-- Links -->
     <li><a class="hover:text-purple-500" href="index.html">Home</a></li>
     <li><a class="hover:text-purple-500" href="reparaturen.html">Reparaturen</a></li>
@@ -126,9 +122,6 @@
     <button id="netlify-logout-desktop" class="hidden p-2 bg-red-500 text-white rounded">Logout</button>
   </div>
 </nav>
-
-
-
 
 
 <!-- Hero -->
@@ -291,7 +284,7 @@
     });
   </script>
 
-<script src="/js/main.js"></script>
+<script src="script.js"></script>
 
   
 </script>
