--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>A&T Tech – Home</title>
+  <title>A&T Tech – Kontakt</title>
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
