--- a/builds.html
+++ b/builds.html
@@ -182,7 +182,16 @@
   <footer class="text-center p-6 bg-gray-200 dark:bg-gray-700 mt-12">
     <p>© 2025 A&T Tech – Alle Rechte vorbehalten.</p>
   </footer>
+ <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      once: true,
+      duration: 800
+    });
+  </script>
+   <!-- JS -->
 
+  <script src="script.js"></script>
 
 
 </body>
