--- a/index.html
+++ b/index.html
@@ -121,9 +121,31 @@
       </svg>
     </button>
     <button id="netlify-logout-desktop" class="hidden p-2 bg-red-500 text-white rounded">Logout</button>
-  
+    
+ <div class="md:hidden">
+    <button id="menu-toggle" class="focus:outline-none">
+      <!-- Icon -->
+      <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          d="M4 6h16M4 12h16M4 18h16" />
+      </svg>
+    </button>
+  </div>
 </nav>
 
+  <!-- 📱 Mobile Dropdown -->
+<div id="mobileMenu" class="hidden md:hidden bg-gray-800 text-white p-6 space-y-4">
+  <a class="block hover:text-purple-400" href="index.html">Home</a>
+  <a class="block hover:text-purple-400" href="reparaturen.html">Reparaturen</a>
+  <a class="block hover:text-purple-400" href="builds.html">PC-Builds</a>
+  <a class="block hover:text-purple-400" href="about.html">Über uns</a>
+  <a class="block hover:text-purple-400" href="contact.html">Kontakt</a>
+  <a href="https://discord.com" target="_blank" class="block bg-indigo-600 px-3 py-1 rounded-lg text-center hover:bg-indigo-500">
+    Discord
+  </a>
+  <button id="netlify-login-mobile" class="w-full bg-green-500 px-3 py-1 rounded">Login</button>
+  <button id="netlify-logout-mobile" class="w-full bg-red-500 px-3 py-1 rounded hidden">Logout</button>
+</div>
 
   <!-- Hero -->
 <section id="home" 
