--- a/gaming-pcs.html
+++ b/gaming-pcs.html
@@ -88,40 +88,92 @@
     </li>
   </ul>
 
-  <!-- Rechts: Icons/Login -->
-  <div class="flex items-center space-x-4 ml-auto">
-    <!-- Home -->
-    <a href="index.html" class="flex p-2 hover:bg-blue-300 rounded">
-      <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 1024 1024" fill="currentColor">
-        <path d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 0 0-44.4 0L77.5 505a63.9 63.9 0 0 0-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0 0 18.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204z"/>
-      </svg>
-    </a>
+<!-- Rechts: Icons/Login (nur Desktop sichtbar) -->
+<div class="hidden md:flex items-center space-x-4 ml-auto">
+  <!-- Home -->
+  <a href="index.html" class="flex p-2 hover:bg-blue-300 rounded">
+    <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 1024 1024" fill="currentColor">
+      <path d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 0 0-44.4 0L77.5 505a63.9 63.9 0 0 0-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0 0 18.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204z"/>
+    </svg>
+  </a>
 
-    <!-- Suche -->
-    <button class="flex p-2 hover:bg-blue-300 rounded">
-      <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor">
-        <path d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" stroke-linecap="round" stroke-linejoin="round"/>
+  <!-- Suche -->
+  <button class="flex p-2 hover:bg-blue-300 rounded">
+    <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor">
+      <path d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+  </button>
+
+  <!-- Warenkorb -->
+  <button class="flex p-2 hover:bg-blue-300 rounded">
+    <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor">
+      <circle cx="9" cy="21" r="1"/>
+      <circle cx="20" cy="21" r="1"/>
+      <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/>
+    </svg>
+  </button>
+
+  <!-- Login / Logout -->
+  <button id="netlify-login-desktop" class="flex items-center p-2 hover:bg-blue-300 rounded">
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+      <path d="M12 12c2.7 0 4.8-2.1 4.8-4.8S14.7 2.4 12 2.4 7.2 4.5 7.2 7.2 9.3 12 12 12zm0 2.4c-3.2 0-9.6 1.6-9.6 4.8v2.4h19.2v-2.4c0-3.2-6.4-4.8-9.6-4.8z"/>
+    </svg>
+  </button>
+  <button id="netlify-logout-desktop" class="hidden p-2 bg-red-500 text-white rounded">Logout</button>
+</div>
+
+    
+ <div class="md:hidden">
+    <button id="menu-toggle" class="focus:outline-none">
+      <!-- Icon -->
+      <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          d="M4 6h16M4 12h16M4 18h16" />
       </svg>
     </button>
-
-    <!-- Warenkorb -->
-    <button class="flex p-2 hover:bg-blue-300 rounded">
-      <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor">
-        <circle cx="9" cy="21" r="1"/>
-        <circle cx="20" cy="21" r="1"/>
-        <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/>
-      </svg>
-    </button>
-
-    <!-- Login / Logout -->
-    <button id="netlify-login-desktop" class="flex items-center p-2 hover:bg-blue-300 rounded">
-      <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-        <path d="M12 12c2.7 0 4.8-2.1 4.8-4.8S14.7 2.4 12 2.4 7.2 4.5 7.2 7.2 9.3 12 12 12zm0 2.4c-3.2 0-9.6 1.6-9.6 4.8v2.4h19.2v-2.4c0-3.2-6.4-4.8-9.6-4.8z"/>
-      </svg>
-    </button>
-    <button id="netlify-logout-desktop" class="hidden p-2 bg-red-500 text-white rounded">Logout</button>
   </div>
 </nav>
+
+
+<!-- 📱 Mobile Dropdown -->
+<div id="mobileMenu" class="hidden md:hidden bg-gray-800 text-white p-6 space-y-4">
+
+  <!-- Navigation -->
+  <a class="block hover:text-purple-400" href="index.html">Home</a>
+  <a class="block hover:text-purple-400" href="reparaturen.html">Reparaturen</a>
+  <a class="block hover:text-purple-400" href="builds.html">PC-Builds</a>
+  <a class="block hover:text-purple-400" href="about.html">Über uns</a>
+  <a class="block hover:text-purple-400" href="contact.html">Kontakt</a>
+
+  <!-- Discord -->
+  <a href="https://discord.com" target="_blank"
+     class="block bg-indigo-600 px-3 py-1 rounded-lg text-center hover:bg-indigo-500">
+    Discord
+  </a>
+
+  <!-- Suche -->
+  <button class="flex items-center space-x-2 w-full p-2 hover:bg-gray-700 rounded">
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" stroke-width="2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+    <span>Suche</span>
+  </button>
+
+  <!-- Warenkorb -->
+  <button class="flex items-center space-x-2 w-full p-2 hover:bg-gray-700 rounded">
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" stroke-width="2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <circle cx="9" cy="21" r="1"/>
+      <circle cx="20" cy="21" r="1"/>
+      <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/>
+    </svg>
+    <span>Warenkorb</span>
+  </button>
+
+  <!-- Login / Logout -->
+  <button id="netlify-login-mobile" class="w-full bg-green-500 px-3 py-1 rounded">Login</button>
+  <button id="netlify-logout-mobile" class="w-full bg-red-500 px-3 py-1 rounded hidden">Logout</button>
+
+</div>
 
 
 <!-- Hero -->
