--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   
   <!-- 🌙 Darkmode-Switch (nur Mobile sichtbar) -->
   <label class="inline-flex items-center relative">
-    <input class="peer hidden" id="darkmode-toggle" type="checkbox" />
+    <input class="peer hidden" id="darkmode-toggle-mobile" type="checkbox" />
     <div
       class="relative w-[50px] h-[24px] bg-white peer-checked:bg-zinc-500 rounded-full 
       after:absolute after:content-[''] after:w-[18px] after:h-[18px] 
