--- a/workstation-pcs.html
+++ b/workstation-pcs.html
@@ -34,7 +34,7 @@
     <!-- Darkmode Switch -->
   <!-- From Uiverse.io by jubayer-10 --> 
 <label class="inline-flex items-center relative">
-  <input class="peer hidden" id="darkmode-toggle" type="checkbox" />
+  <input class="peer hidden" id="darkmode-toggle-desktop" type="checkbox" />
   <div
     class="relative w-[80px] h-[36px] bg-white peer-checked:bg-zinc-500 rounded-full 
     after:absolute after:content-[''] after:w-[28px] after:h-[28px] 
